--- a/.github/workflows/update_nodes.yml
+++ b/.github/workflows/update_nodes.yml
@@ -4,7 +4,12 @@ on:
   schedule:
     - cron: '0 16 * * *'  # 每天 UTC 0 点自动运行
   workflow_dispatch:      # 支持手动触发
-
+  
+# 🔒 防止并发运行（非常关键）
+concurrency:
+  group: update-nodes
+  cancel-in-progress: true
+  
 jobs:
   update-nodes:
     runs-on: ubuntu-latest
@@ -13,6 +18,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
+          fetch-depth: 1
           persist-credentials: false  # 禁用默认凭据
 
       - name: Set up Python
@@ -33,5 +39,6 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add nodes.txt
-          git commit -m "自动更新节点备注 ⏰" || echo "No changes to commit"
+          git commit -m "自动更新节点备注 ⏰" 
+          git pull --rebase origin main
           git push https://$MY_PAT@github.com/${{ github.repository }} HEAD:${GITHUB_REF##*/}
